--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -59,12 +59,12 @@ leadfinder:
     mx-unknown-policy: ${EMAIL_MX_UNKNOWN_POLICY:ALLOW}
 
   outreach:
-    enabled: ${OUTREACH_ENABLED:false}
+    enabled: ${OUTREACH_ENABLED:true}
     from-address: ${OUTREACH_FROM:Patrycja Swigost <office@o1jobs.de>}
     default-subject: ${OUTREACH_SUBJECT:Zuverlässige polnische Arbeitskräfte – kurzfristig verfügbar}
-    max-emails-per-run: ${OUTREACH_MAX_PER_RUN:4}
+    max-emails-per-run: ${OUTREACH_MAX_PER_RUN:3}
     simulate-only: ${OUTREACH_SIMULATE_ONLY:false}
-    interval-millis: ${OUTREACH_INTERVAL_MS:7200000}
+    interval-millis: ${OUTREACH_INTERVAL_MS:3600000}
     delay-between-emails-millis: ${OUTREACH_DELAY_MS:15000}
     first-email-body-template: |
       Guten Tag
